fix mobile cut off issue

--- a/assets/styles/theme/sections/headers.scss
+++ b/assets/styles/theme/sections/headers.scss
@@ -4,7 +4,6 @@ header {
 
 .page-header {
     min-height: 100vh;
-    max-height: 999px;
     padding: 0;
     position: relative;
     overflow: hidden;
